--- a/L2/L2.tex
+++ b/L2/L2.tex
@@ -40,7 +40,7 @@ Let's see some basic properties of a ring $R$:
 		\[1= 1\rdot 1'=1'\]
 		So, in fact, they are the same and it is unique.\newline
 		Now, by definition additive inverses are unique, so $-a = (-1)\rdot a$ must both sum with $a$ to $0$. We check 
-		\[a+(-1)\rdot -a = 1\rdot a + (-1) \rdot  a = (1+(-1))\rdot a = 0\rdot a = 0\]
+		\[a+(-1)\rdot a = 1\rdot a + (-1) \rdot  a = (1+(-1))\rdot a = 0\rdot a = 0\]
 		which confirms it.
 	\end{proof}
 \end{enumerate}
