--- a/L2/L2.tex
+++ b/L2/L2.tex
@@ -189,7 +189,7 @@ A field $F$ is a commutative ring with $1\ne 0$ such that $F^\times = F \setminu
 		(iv) $a \rdot b \in S$ \quad  (closure under $\rdot$)
 	\end{tabular}\]
 \end{dfn}
-\begin{prop}[title=Subgroup Criterion]
+\begin{prop}[title=Subring Criterion]
 	If $S\subset R$ is a subset of a ring such that $\forall a,b \in S$ 
 	\begin{enumerate}
 		\item $S \ne \emptyset$
