--- a/L3/L3.tex
+++ b/L3/L3.tex
@@ -5,7 +5,7 @@
 	\chapter{Lecture 3}
 	\underline{\textbf{\large{Polynomial Rings}}}\\
 	Fix a commutative ring $R$ with $1$ (e.g. $R=\Z, R=\Q$, etc)
-	Let $X$ be an indeterminate
+	Let $X$ be an indeterminate (this means $X$ is just a symbol without an exact representation, compared to to when you think $x$ is a variable representing a number).
 	\begin{dfn}[title = Polynomial Ring]
 		A \textbf{polynomial} in $X$ with coefficients in $R$ is a formal, finite sum
 		\[a_nX^n+a_{n-1}X^{n-1}+\dots+a_1X+a_0, \quad a_i\in R, i\in \{0, \dots, n\}\]
@@ -15,15 +15,15 @@
 		has a $1$ "missing" infront of $X^2$.\\
 		If $a_n=1$, we say the polynomial is \textbf{monic} 
 	\end{dfn}
-	\begin{dfn}[title=Constant Polynomial]
-		The set of polynomials in $X$ w/ coefficients in $R$ is denoted
+	\begin{dfn}[title=Set of Polynomials andConstant Polynomial]
+		The \textbf{set of polynomials} in $X$ w/ coefficients in $R$ is denoted
 		\[R[X] \coloneqq \{a_nX^n+\dots+a_0|a_i \in R\} \]
 		If the degree of $p\in R[X]$ is zero, we say $p$ is a \textbf{constant} polynomial.
 	\end{dfn}
 	Observe that there is an obvious inclusion map from a ring into the ring of polynomials, by taking each element $a\in R$ to the constant polynomial $a\in R[X]$.
 	\begin{align*}
-		R \to R[X]\\
-		a\mapsto a
+		&R \to R[X]\\
+		&a\mapsto a
 	\end{align*}
 	\begin{claim}
 		$R[X]$ is a ring.
@@ -38,13 +38,13 @@
 		\begin{align*}
 			&(a_nX^n+a_{n-1}X^{n-1}+\dots+ a_1X+a_0) \rdot (b_nX^n+b_{n-1}X^{n-1}+\dots+b_1X+b_0) \\
 			& \begin{aligned}=(a_0\rdot b_0)+(a_1\rdot b_0+a_0\rdot b_1)X &+ (a_2\rdot b_0 + a_1\rdot b_1+a_0\rdot b_2)X^2\\
-			&+\dots+\sum_{k=0}^{l}a_k\rdot b_{l-k} X^l + \dots + (a_n\rdot b_m)X^{n+m}
+			&+\dots+\left(\sum_{k=0}^{l}a_k\rdot b_{l-k}\right) X^l + \dots + (a_n\rdot b_m)X^{n+m}
 			\end{aligned}
 		\end{align*}
 	\end{proof}
 	\newpage
 	\begin{example}
-		$\Z[X],\Q[X],\modZ{3}[X]$. In particular, we may write
+		$\Z[X],\Q[X],\modZ{3}[X]$, which are rings of polynomials with coefficients in different number systems. In particular, we may write $\modZ{3}$ coefficients without the "overbar" notation,
 		\[X+2, X^3+2X^2+1 \in \modZ{3}[X]\]
 	\end{example}
 	Factoring polynomials depends on the coefficient ring. For example
@@ -52,6 +52,7 @@
 		&X^2-2\in \Z[X] \\
 		&X^2-2 = (X+\sqrt{2})\rdot (X-\sqrt{2}) \in \R[X]
 	\end{align*}
+	Here we can see that $X^2-2$ can not be factored further in the integers, but in the real numbers it can.\\
 	Similarly, $X^2+1\in\Z[X], X^2+1\in \R[X]$. These polynomials doesn't factor in either ring, but it does factor in $\C[X]$
 	\[X ^2+1=(X+i)(X-i)\]
 	it also factors in $\modZ{2}[X]$
@@ -71,19 +72,19 @@
 			\[(a_n\rdot b_m)X^{n+m}\]
 			Since $R$ is an integral domain and $a_n,b_m\ne 0$. Then $a_n\rdot b_m\ne 0$ (This also proves (iii))
 	(ii) Suppose $p(X) \in R[X]^\times$, say $p(X)\rdot q(X)=1$.\\
-			Then \[\deg(p\rdot q) = \deg(1) = 0\implies \deg(p)=\deg(q)=0\implies p\in R\]
+			Then \[\deg(p\rdot q) = \deg(1) = 0\implies \deg(p)+\deg(q)=0\implies \deg(p)=\deg(q)=0\implies p(X)\in R\]
+		i.e $p(X)$ is a constant polynomial whose constant coefficient, say $p$, is from the ring $R$. Hence, since $p(X)$ is a unit, so is $p$.
 	\end{proof}
 	\begin{example}
-		$\modZ{4}[X]$\\
-		Consider $2X^2 +1, 2X^5+3X$,
+		Consider $2X^2 +1, 2X^5+3X \in \modZ{4}[X]$
 		\begin{align*}
 		(2X^2+1)\rdot (2X^5+3X)=2\rdot 2X^7 + \text{ lower terms}
 		= 0\rdot X^7 + \text{ lower terms}
 		\end{align*}
 	This implies
 	\[\deg \left((2X^2+1)\rdot (2X^5+3X)\right)<\deg(2X^2+1)+\deg(2X^5+3x) \]
+	When $R$ isn't an integral domain, the degree of the product of polynomials can be less than the degree of their sum (in general, the degree is at most the sum).
 	\end{example}
-\newpage
 \underline{\textbf{\large{Ring Homomorphisms}}}
 \begin{dfn}[title = Ring homomorphism and isomorphism]
 	Let $R,S$ be rings. A \textbf{ring homomorphism} is a map $f: R \to S$ such that
@@ -100,15 +101,18 @@
 	\[\Ker f \coloneqq f^{-1}(0_S)\subset R\]
 \end{dfn}
 \begin{prop}
-	Let $R,S$ be rings and $f: R \to S$ a homomorphism
+	Let $R,S$ be rings and $f: R \to S$ a homomorphism, then
 	\begin{enumerate}
 		\item $\Img f \subset S$ is a subring
 		\item $\Ker f \subset R$ is a subring
 	\end{enumerate}
-	Moreover, if $r\in R$, $a\in \Ker f$ then $r\rdot a \in \Ker f$
+	where $\Img$ is the image of $f$ and $\Ker$ is the kernel.\\
+	Moreover, if $r\in R$, $a\in \Ker f$ then $r\rdot a \in \Ker f$.\\
+	 (this is a stronger property of the kernel, which shows it is more than just a subring, since it is also closed under multiplication with elements from outside the kernel, in particular from the ring).
 \end{prop}
-\begin{proof}~\\
-	(i) \begin{claim}
+Both proofs rely on using the Subring Criterion Test mentioned in Lecture 2.
+\begin{proof}[Proof (i)]First, we check show that it is non empty.
+	 \begin{claim}
 		$f(0_R) = 0_S$ and in particular $\Img f \ne \emptyset$.
 		\begin{proof}
 			By definition of ring homomorphism
@@ -118,30 +122,36 @@
 	\end{claim}
 	Suppose now $f(a), f(b) \in \Img f$, then
 	\[f(a)\rdot f(b) = f(a\rdot b) \in \Img f\]
-	To see $f(a)-f(b) \in \Img f$, it suffices to see that $-f(b)=f(-b)$.
+	which shows the product is also in the image.\\
+	Finally, whats left to show is that the difference is also in the image.
+	To see $f(a)-f(b) \in \Img f$, it suffices to see that $-f(b)=f(-b)$.\\
 	\begin{claim}
 		$-f(b)=f(-b)$
 	\end{claim}
 	\begin{proof}
 		Again using the ring homomorphism definition
 		\[0=f(0_R)=f(b+(-b))=f(b)+f(-b) \implies f(-b)=-f(b)\]
-	\end{proof}~\\~\\
-	(ii) ~\\
+	\end{proof}
+	Therefore, with the subring criterion satisfied, then $\Img f$ is a subring in $S$.
+	\end{proof}
+	\begin{proof}[Proof (ii)]
 	Since $f(0_R)=0_S \implies 0_R \in \Ker f$, hence $\Ker f$ is nonempty.\\
 	Suppose $a,b\in \Ker f$, then
 	\[f(a-b) = f(a)-f(b)=0-0=0 \implies a-b \in \Ker f\]
 	and
 	\[f(a\rdot b) = f(a)\rdot f(b) = 0\rdot 0 = 0 \implies a\rdot b \in \Ker f\]
+	Hence, $\Ker f$ is a subring in $R$.\\
 	Now suppose $r\in R$
 	\[f(r\rdot a)=f(r)\rdot f(a)=f(r)\rdot 0=0\]
+	which proves the additional property.
 \end{proof}
 \begin{example}
-	Consider 
+	Consider the map which takes even numbers to $0$ and odd numbers to $1$.
 	\begin{align*}
 		f: \,&\Z \to \modZ{2}\\
 		&a \mapsto a \Mod{2}
 	\end{align*}
-	Check the possible situations
+	Check the possible situations (these show the sums and products follow the homomorphism properties)
 	\begin{equation*}
 	\text{Addition}  \quad \left|\quad\begin{array}{>$l<$}
 	$\obar{0}+ \obar{0} = \obar{0}$ \quad
@@ -168,29 +178,30 @@
 \begin{example}
 	The following is a non-example. Consider
 	\begin{align*}
-		f_n \,:& \Z \to \Z \\
+		f_n:\,& \Z \to \Z \\
 		&a \mapsto n\rdot a
 	\end{align*}
 	Then
 	\[f_n(a+b)=n\rdot (a+b)=n\rdot a+n\rdot b= f_n(a)+f_n(b)\]
 	But 
 	\[f_n(a\rdot b)=n(a\rdot b) \stackrel{?}{=} n^2(a\rdot b)=(n\rdot a)\rdot (n\rdot b)=f_n(a)\rdot f_n(b)\]
-	So $f_n$ is a ring homomorphism if and only if $n^2=n$ (i.e $n=0,1$). $f_0$ is the constant map zero and $f_1$ is the identity\\
-	Therefore $f_2,f_3,\dots $ are \textbf{NOT} ring homomorphisms
+	So $f_n$ is a ring homomorphism if and only if $n^2=n$ (i.e $n=0,1$). $f_0$ is the constant map zero and $f_1$ is the identity.\\
+	Therefore $f_2,f_3,\dots $ are \textbf{NOT} ring homomorphisms. In particular, it shows that a group homomorphism is not necessarily a ring homomorphism.
 \end{example}
 \begin{example}
 	Here is a polynomial homomorphism which maps a polynomial to its own constant term
 	\begin{align*}
-		\phi: \R[X] \to \R \\
-		p(X) \mapsto p(0)
+		\phi: &\R[X] \to \R \\
+		&p(X) \mapsto p(0)
 	\end{align*}
 	This can easily be checked
 	\begin{align*}
 		&\phi(p+q) = (p+q)(0)=p(0)+q(0)=\phi(p)\phi(q)\\
-		&\phi(p\rdot q)=(p\rdot q)(0)=p(0)\rdot q(0)=\phi(p)\rdot \phi(q)\\
+		&\phi(p\rdot q)=(p\rdot q)(0)=p(0)\rdot q(0)=\phi(p)\rdot \phi(q)
 	\end{align*}
-	Its kernel can also be stated
-	\[\Ker \{p\in \R[X]\,|\,p(0)=0\} = \{p\in R[X]\,|\,p(x) = x\rdot p'(x) \text{for some} p'\in \R[X]\}\]
+	Its kernel (which are polynomials who have $0$ as a root) can be written
+	\[\Ker \{p\in \R[X]\,|\,p(0)=0\} = \{p\in R[X]\,|\,p(x) = x\rdot p'(x) \text{ for some } p'\in \R[X]\}\]
+	($p'$ is not the derivative, just another polynomial).
 \end{example}
 \textbf{Question}: What about
 \begin{align*}
