--- a/L3/L3.tex
+++ b/L3/L3.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 	\chapter{Lecture 3}
-	\underline{\textbf{\large{Polynomial Rings}}}\\
+	\underline{\textbf{\Large{Polynomial Rings}}}\\
 	Fix a commutative ring $R$ with $1$ (e.g. $R=\Z, R=\Q$, etc)
 	Let $X$ be an indeterminate (this means $X$ is just a symbol without an exact representation, compared to to when you think $x$ is a variable representing a number).
 	\begin{dfn}[title = Polynomial Ring]
@@ -85,7 +85,7 @@
 	\[\deg \left((2X^2+1)\rdot (2X^5+3X)\right)<\deg(2X^2+1)+\deg(2X^5+3x) \]
 	When $R$ isn't an integral domain, the degree of the product of polynomials can be less than the degree of their sum (in general, the degree is at most the sum).
 	\end{example}
-\underline{\textbf{\large{Ring Homomorphisms}}}
+\underline{\textbf{\Large{Ring Homomorphisms}}}
 \begin{dfn}[title = Ring homomorphism and isomorphism]
 	Let $R,S$ be rings. A \textbf{ring homomorphism} is a map $f: R \to S$ such that
 	\begin{enumerate}
