--- a/Main.tex
+++ b/Main.tex
@@ -110,12 +110,12 @@ boxed title style = {colback=green!35!black}
 {
 	enhanced,
 	before title = {\stepcounter{thm}},
-	colback=cyan!10,
-	colframe=cyan!35!black,
+	colback=Dandelion!10,
+	colframe=Dandelion!35!black,
 	fonttitle=\bfseries,
 	top=3mm,
 	attach boxed title to top left={xshift = 5mm, yshift=-1.5mm},
-	boxed title style = {colback=cyan!35!black}
+	boxed title style = {colback=Dandelion!35!black}
 }{lem}
 
 \betternewtcbtheorem[number within= chapter]% init options
@@ -149,7 +149,7 @@ boxed title style = {colback=green!35!black}
 \newcommand{\Mod}[1]{\ (\mathrm{mod}\ #1)}
 \DeclareMathOperator{\Ker}{Ker}
 \DeclareMathOperator{\Img}{Im}
-
+\DeclareMathOperator{\ev}{Ev}
 \newcommand*\quot[2]{{^{\textstyle #1}\big/_{\textstyle #2}}}
 
 
