--- a/L4/L4.tex
+++ b/L4/L4.tex
@@ -179,10 +179,10 @@ Therefore, there is a bijection between
 \begin{example}
 	Let $R$ be a ring and $X$ a non-empty set.\\
 	Consider the ring
-	\[\mathcal{F}(X,R) \coloneqq \{f:x\to R\}\]
+	\[\mathcal{F}(X,R) \coloneqq \{f:X\to R\}\]
 	For a fixed element $a\in X$, the \textbf{evaluation map} at $a$ is
 	\begin{align*}
-		\ev_a : &\mathcal{F}(X,R)\to R\\
+		\ev_a : \,&\mathcal{F}(X,R)\to R\\
 		&f\mapsto f(a)
 	\end{align*}
 \end{example}
