--- a/Main.tex
+++ b/Main.tex
@@ -14,7 +14,9 @@
 \usepackage{titlesec}
 \usepackage{xpatch}
 \usepackage{array}
-
+\usepackage{tikz}
+\usepackage{tikz-cd}
+\usetikzlibrary{shapes,fit}
 \setlist[enumerate]{label=(\roman*)}
 
 \makeatletter
@@ -184,4 +186,7 @@ boxed title style = {colback=green!35!black}
 \subfile{L2/L2}
 \subfile{L3/L3}
 \subfile{L4/L4}
+\subfile{L5/L5}
+\subfile{L6/L6}
+\subfile{L7/L7}
 \end{document}
