Def Titles in 6,7

--- a/L6/L6.tex
+++ b/L6/L6.tex
@@ -7,7 +7,7 @@
 Let $R$ be a ring with $1\ne 0$.\\
 Recall that if $A\subset R$, then
 	\[(A)= \bigcap_{\mathclap{\substack{I \subset R \text{ ideals}\\A\subset I} } } I\]
-\begin{dfn}
+\begin{dfn}[title= Ring Multiplication]
 	For fixed sets $A,B \subset R$, we define \textbf{ring multiplication} as
 	\[A\rdot B \coloneqq \{a_1b_1 + \dots + a_nb_n \mid a_1,\dots, a_n \in A,\, b_1, \dots, b_n \in B,\, n\in \N\}\]
 \end{dfn}
@@ -113,7 +113,7 @@ We also say that if $b\in (a)$, that $a$ \textbf{divides} $b$, i.e $a\mid b$.
 	\[c\in (b), \exists s\in R, \, c=s\rdot b=s\rdot (r\rdot a)=(s\rdot r)\rdot a\in (a)\implies (b) \subset (a)\]
 	On the other hand, if $(b)\subset (a)$, then $b\in (b) \subset (a)$.
 \end{proof}
-\begin{dfn}
+\begin{dfn}[title = Prime Ideal]
 	Let $R$ be a commutative ring.\\
 	An ideal $P\ne R$ is called a \textbf{prime ideal} if for all $a,b\in R$ such that $a\rdot b\in P$, then either $a\in P$ or $b\in P$.
 \end{dfn}
