--- a/L7/L7.tex
+++ b/L7/L7.tex
@@ -30,7 +30,7 @@ Let $R$ be a commutative ring with $1\ne 0$.
 \begin{proof}
 	$\Ker f =0$ or $F$. Because $f$ is nonzero, we conclude that $\Ker f =0$, which means $f$ is injective since the only element that maps to $0$ is $0$.
 \end{proof}
-\begin{dfn}
+\begin{dfn}[title = Maximal Ideal]
 	An ideal $M\subset R$ is called a \textbf{maximal ideal} if
 	\begin{enumerate}
 		\item $M\ne R$
@@ -40,7 +40,7 @@ Let $R$ be a commutative ring with $1\ne 0$.
 Not all rings admit maximal ideals and a given ring may admit multiple maximal ideals, e.g $2\Z,3\Z$ are maximal ideals in $\Z$.
 \newpage
 \underline{\textbf{\Large A digression on Zorn's Lemma}}~\\
-\begin{dfn}
+\begin{dfn}[title = Partial Order]
 	A \textbf{partial order} on a non-empty set $A$ is a relation $\le$ such that
 	\begin{enumerate}
 		\item $x\le x$ (Reflexive)
@@ -60,7 +60,7 @@ Not all rings admit maximal ideals and a given ring may admit multiple maximal i
 	\end{tikzcd}
 	\]
 \end{example}
-\begin{dfn}
+\begin{dfn}[title = {Poset, Chain, Upper Bound, Maximal Element}]
 	If $A,\le$ is a \textbf{partially ordered set} (\textbf{poset}), then
 	\begin{enumerate}
 		\item A subset $B\subset A$ is a \textbf{chain} if $\forall x,y \in B \implies x\le y$ or $y\le x$ (everything can be compared).
