--- a/L4/L4.tex
+++ b/L4/L4.tex
@@ -125,7 +125,7 @@ becomes
 		\[f(r+a)=f(r)+f(a)=f(r) \implies r+a \in f^{-1}(f(r)) \implies r+I \subset f^{-1}(f(r))\]
 		Similarly, if $x\in f^{-1}(f(r))$, then
 		\[f(r)=f(x)\implies f(r)-f(x)=0\implies f(r-x)=0\]
-		This last equality means $r-x (and x-r) \in \Ker f$, hence
+		This last equality means $r-x$ (and $x-r$) $\in \Ker f$, hence
 		\[x-r\in \Ker f \implies x = r+(x-r)\in r+I \implies
 		f^{-1}(f(r)) \subset r+I \]
 		Therefore, both inclusions are proved and $r+I =f^{-1}(f(r))$.
