L8 and some of 9

--- a/Main.tex
+++ b/Main.tex
@@ -14,6 +14,7 @@
 \usepackage{titlesec}
 \usepackage{xpatch}
 \usepackage{array}
+\usepackage{polynom}
 \usepackage{tikz}
 \usepackage{tikz-cd}
 \usetikzlibrary{shapes,fit}
@@ -189,4 +190,5 @@ boxed title style = {colback=green!35!black}
 \subfile{L5/L5}
 \subfile{L6/L6}
 \subfile{L7/L7}
+\subfile{L8/L8}
 \end{document}
