--- a/L2/L2.tex
+++ b/L2/L2.tex
@@ -80,7 +80,7 @@ Let's see some basic properties of a ring $R$:
 	\[\obar{a}\rdot \obar{q}=\obar{a\rdot q}= \obar{d\rdot k\rdot q} = \obar{n \rdot k}=\obar{n}=\obar{0}\] 
 	Thus, $\obar{a}$ is a zero divisor.
 \end{proof}
-\begin{crl}{}{}
+\begin{crl}[title= $\modZ{n}$ is a field for prime $n$]
 	If $n$ is prime, then $\Z/n\Z$ is a field.
 \end{crl}
 \begin{proof}
@@ -158,7 +158,7 @@ A field $F$ is a commutative ring with $1\ne 0$ such that $F^\times = F \setminu
 	but
 	\[\obar{2}\ne \obar{0}\]
 \end{example}
-\begin{crl}
+\begin{crl}[title = Finite integral domain is field]
 	If $R$ is a finite (as a set) integral domain then $R$ is a field
 \end{crl}
 \begin{proof}
