--- a/L3/L3.tex
+++ b/L3/L3.tex
@@ -15,7 +15,7 @@
 		has a $1$ "missing" infront of $X^2$.\\
 		If $a_n=1$, we say the polynomial is \textbf{monic} 
 	\end{dfn}
-	\begin{dfn}[title=Set of Polynomials andConstant Polynomial]
+	\begin{dfn}[title=Set of Polynomials and Constant Polynomial]
 		The \textbf{set of polynomials} in $X$ w/ coefficients in $R$ is denoted
 		\[R[X] \coloneqq \{a_nX^n+\dots+a_0|a_i \in R\} \]
 		If the degree of $p\in R[X]$ is zero, we say $p$ is a \textbf{constant} polynomial.
@@ -86,7 +86,7 @@
 	When $R$ isn't an integral domain, the degree of the product of polynomials can be less than the degree of their sum (in general, the degree is at most the sum).
 	\end{example}
 \underline{\textbf{\Large{Ring Homomorphisms}}}
-\begin{dfn}[title = Ring homomorphism and isomorphism]
+\begin{dfn}[title = Ring Homomorphism and Isomorphism]
 	Let $R,S$ be rings. A \textbf{ring homomorphism} is a map $f: R \to S$ such that
 	\begin{enumerate}
 		\item $f(a+_R b) = f(a) +_S f(b) \qquad (\textbf{Group homomorphism})$
@@ -96,7 +96,7 @@
 	We say, in this case $R$ is \textbf{isomorphic} to $S$ as rings and write
 	\[R \cong S\]
 \end{dfn}
-\begin{dfn}
+\begin{dfn}[label = Kernel]
 	The \textbf{kernel} of a ring homomorphism $f: R\to S$ is the subset
 	\[\Ker f \coloneqq f^{-1}(0_S)\subset R\]
 \end{dfn}
