--- a/L4/L4.tex
+++ b/L4/L4.tex
@@ -137,7 +137,7 @@ becomes
 	\end{align*}
 	The point being that $\obar{r}$ is independent of the representative $r\in R$.
 \end{proof}
-\begin{thm}
+\begin{thm}[title = Canonical quotient map is surjective]
 	If $I\subset R$ is an ideal, then the \textbf{quotient map}
 	\begin{align*}
 		f:&R \to R/I\\
