--- a/L6/L6.tex
+++ b/L6/L6.tex
@@ -130,7 +130,7 @@ We also say that if $b\in (a)$, that $a$ \textbf{divides} $b$, i.e $a\mid b$.
 \begin{prop}
 	$R$ is an integral domain \textit{iff} $\{0\}$ is prime
 \end{prop}
-\begin{thm}
+\begin{thm}[title = Prime Ideal $\Longleftrightarrow R/P$ integral domain]
 	Assume $R$ is commutative.\\
 	An ideal $P\subset R$ is prime \textit{iff} $R/P$ is an integral domain.
 \end{thm}
