--- a/L8/L8.tex
+++ b/L8/L8.tex
@@ -89,7 +89,7 @@ There are some repeats if we care about multiplication like
 We should define an equivalence relation
 \[\frac{a}{b}\sim \frac{c}{d} \Longleftrightarrow ad=bc\]
 e.g $\frac{4}{6}\sim \frac{6}{9}$ because $4\rdot 9=36=6\rdot 6$.
-\begin{dfn}
+\begin{dfn}[title = Field of Rational Numbers]
 	The \textbf{field of rational numbers} is 
 	\[\Q\coloneqq \{\frac{m}{n}| \,m,n\in\Q,\,n\ne0\}/\sim \]
 	and this is a field with operations given by
@@ -130,8 +130,8 @@ However, if $r$ is a zero divisor, $r\rdot s=0$ then we want to exclude
 	\[\frac{a}{r}\sim \frac{b}{s} \Longleftrightarrow a\rdot d=b\rdot r\]
 	There is no ambiguity in the equality of products since $R$ is integral there are no zero zero divisors, $s,r\ne 0$.
 \end{dfn}
-\begin{dfn}
-	The \textbf{field of fractions } of $R$ is
+\begin{dfn}[title =Field of Fractions]
+	The \textbf{field of fractions} of $R$ is
 	\[Q(R) \coloneqq R\times (R\setminus\{0\})/\sim \,= \left\{\left.\left[\frac{a}{b}\right]\right|a,b\in R,\,b\ne 0\right\} \]
 \end{dfn}
 \begin{thm}
