--- a/L7/L7.tex
+++ b/L7/L7.tex
@@ -22,7 +22,7 @@ Let $R$ be a commutative ring with $1\ne 0$.
 	Since $u\in (a)$, we may write $u=r\rdot a, r\in R$, then
 	\[(r\rdot a)\rdot v=u\rdot v=1=a\rdot (r\rdot v)\implies a\in R^\times \implies R \text{ is a field}\]
 \end{proof}
-\begin{crl}
+\begin{crl}[title = Homomorphism from field to ring is injective]
 	If $F$ is a field, then any nonzero ring homomorphism
 	\[f: F\to R\]
 	is an injective map
@@ -106,7 +106,7 @@ Not all rings admit maximal ideals and a given ring may admit multiple maximal i
 	\quad \text{ or }
 	\underbrace{M'\notin \mathcal{S}}_{M' \text{ is not proper}} \implies M'=R\]
 \end{proof}
-\begin{thm}
+\begin{thm}[title = $M$ maximal in comm. $R \Longleftrightarrow R/M$ is field]
 	If $R$ is a commutative ring with $1\ne 0$, then $M\subset R$ is maximal if and only if $R/M$ is a field.
 \end{thm}
 
@@ -119,7 +119,7 @@ Not all rings admit maximal ideals and a given ring may admit multiple maximal i
 	Since, the only ideals of $R/M$ are $0$ and itself, $R/M$ is a field by Prop 7.1 (ii).
 \end{proof}
 Recall: $P\subset R$ is prime if and only if $R/P$ is an integral domain.
-\begin{crl}
+\begin{crl}[title= Maximal ideals are prime]
 	Maximal ideals are prime.
 \end{crl}
 \begin{proof}~\\
