--- a/Main.tex
+++ b/Main.tex
@@ -191,4 +191,6 @@ boxed title style = {colback=green!35!black}
 \subfile{L6/L6}
 \subfile{L7/L7}
 \subfile{L8/L8}
+\subfile{L9/L9}
+\subfile{L10/L10}
 \end{document}
