--- a/Main.tex
+++ b/Main.tex
@@ -166,7 +166,6 @@ boxed title style = {colback=green!35!black}
 
 
 
-
 \lstset{breaklines, numbers=left, numberstyle=\tiny, stepnumber=1, numbersep=5pt}
 
 \titleformat{\chapter}[display]
@@ -182,7 +181,7 @@ boxed title style = {colback=green!35!black}
 }
 \usepackage{subfiles}
 \begin{document}
-\subfile{Title/Titlepage}
+\subfile{Title/Titlepage} 
 \subfile{L1/L1}
 \subfile{L2/L2}
 \subfile{L3/L3}
@@ -192,5 +191,5 @@ boxed title style = {colback=green!35!black}
 \subfile{L7/L7}
 \subfile{L8/L8}
 \subfile{L9/L9}
-\subfile{L10/L10}
+%\subfile{L10/L10}
 \end{document}
