--- a/L9/L9.tex
+++ b/L9/L9.tex
@@ -13,36 +13,36 @@
 		(r_1,s_1)+(r_2,s_2)&\coloneqq (r_1+r_2,s_1+s_2)\\
 		(r_1,s_1)\rdot (r_2,s_2)&\coloneqq (r_1\rdot r_2,s_1\rdot s_2)
 	\end{align*}
-	More generally, if $\{R_\alpha|\alpha\in A\}$ is any collection of rings, then the \textbf{direct product} of the collection is the ring
-	\[\bigtimes_{\alpha \in A}R_\alpha \coloneqq \{(r_\alpha)_{\alpha\in A}| r_\alpha \in R_\alpha\}\]
+	More generally, if $\{R_\alpha\mid \alpha\in A\}$ is any collection of rings, then the \textbf{direct product} of the collection is the ring
+	\[\bigtimes_{\alpha \in A}R_\alpha \coloneqq \{(r_\alpha)_{\alpha\in A}\mid  r_\alpha \in R_\alpha\}\]
 	with ring operations
 	\begin{align*}
 	(r_\alpha)_{\alpha\in A}+(s_\alpha)_{\alpha\in A}&\coloneqq (r_\alpha +s_\alpha)_{\alpha\in A}\\
-	(r_\alpha)_{\alpha\in A}\rdot (s_\alpha)_{\alpha\in A}&\coloneqq (r_\alpha \rdot s_\alpha)_{\alpha\in A}\\
+	(r_\alpha)_{\alpha\in A}\rdot (s_\alpha)_{\alpha\in A}&\coloneqq (r_\alpha \rdot s_\alpha)_{\alpha\in A}
 	\end{align*}
 	Given $a,b\in \Z$, we say they are \textbf{relatively prime} if the greatest common divisor is $1$.\\
-	Equivalently, we say $a,b$ are relatively prime if there exists $m,n\in\Z$ such that \[am+bn=1\]
+	Equivalently (Bezout's Identity), we say $a,b$ are relatively prime if there exists $m,n\in\Z$ such that \[am+bn=1\]
 \end{dfn}
 \begin{dfn}[title = Comaximal Ideals]
-	In a commutative ring $R$ with $1\ne 0$, two ideals $A,B\subset R$ are \textbf{comaximal} if $A+B=R$.
+	In a commutative ring $R$ with $1\ne 0$, we say two ideals $A,B\subset R$ are \textbf{comaximal} (i.e relatively prime) if $A+B=R$. This implies there exists a sum $a+b$ such that $a+b=1$.
 \end{dfn}
 \begin{thm}
 	Let $A_1,\dots,A_k\subset R$ be ideals in a commutative ring with $1\ne 0$.\\
 	If they are pairwise comaximal then
 	\[A_1\rdot A_2\rdot \dots \rdot A_k = A_1 \cap A_2 \cap \dots \cap A_k\]
 \end{thm}
-\begin{proof}
+\begin{proof}~\\
 	We already know that
 	\[A_1\rdot A_2\rdot \dots \rdot A_k \subset A_1 \cap A_2 \cap \dots \cap A_k\]
 	It suffices to show 
 	\[A_1 \cap A_2 \cap \dots \cap A_k \subset A_1\rdot A_2\rdot \dots \rdot A_k \]
-	First, consider comaximal ideals $A,B$.\\
+	Let's prove this for two ideals and then generalize. First, consider comaximal ideals $A,B$.\\
 	Let $x\in A\cap B$, then we want to show $x\in A\rdot B$\\
 	By comaximality,
 	\[\exists a\in A, b\in B, \, a+b =1 \in A+B\]
 	In particular,
 	\[x=x\rdot 1=x\rdot (a+b)=x\rdot a+x\rdot b\]
-	therefore
+	and so
 	\[x\in A\cap B \implies \begin{rcases}
 	x\in A \implies x\rdot b\in A\rdot B\\
 	x\in B\implies x\rdot a \in A\rdot B
@@ -60,8 +60,8 @@
 		\exists x_k\in A_1,\, y_k\in A_k,\quad  &\text{s.t.} \quad 1=x_k+y_k
 	\end{align*}
 	and this implies
-	\[1=(x_2+y_2)\rdot (x_3+y_3)\rdot \dots\rdot (x_k+y_k)\in A_1+(A_1\rdot \dots \rdot A_k)\]
-	and we conclude $A_1, A,2\rdot \dots A_k$ are comaximal.
+	\[1=(x_2+y_2)\rdot (x_3+y_3)\rdot \dots\rdot (x_k+y_k)\in A_1+(A_2\rdot \dots \rdot A_k)\]
+	since all $x$'s are in $A_1$ and all $y$'s are in the product of the other ideals, the expanded product will have some mix of $x$'s and some mixes of the $y$'s. Hence, we conclude $A_1, A_2\rdot \dots \rdot A_k$ are comaximal.
 \end{proof}
 \begin{thm}[title=Chinese Remainder Theorem]
 	Let $A_1,\dots A_k\subset R$ ideals in a commutative ring with $1\ne 0$.\\
@@ -71,11 +71,12 @@
 	r&\mapsto (r+A_1,r+A_2,r+A_3,\dots,r+A_k)
 	\end{align*}
 	is a ring homomorphism with $\Ker\phi = A_1\cap A_2\cap \dots \cap A_k$.\\
-	If they are pairwise comaximal, then $\phi$ is surjective.
+	Moreover, if they are pairwise comaximal, then $\phi$ is surjective.
 \end{thm}
 \begin{crl}
-	If $A_1,\dots,A_k\subset R$ are pairwise comaximal ideals in a commutative ring with $1\ne 0$, then there is an isomorphism of rings
+	If $A_1,\dots,A_k\subset R$ are pairwise comaximal ideals in a commutative ring with $1\ne 0$, then there is an isomorphism of rings (by the First Isomorphism Theorem)
 	\[R/(A_1\rdot \dots\rdot A_k)\cong R/(A_1\cap A_2\cap \dots \cap A_k) \cong (R/A_1)\times (R/A_2)\times (R/A_3)\times\dots\times(R/A_k)\]
+	So you can think of your quotient ring over the one ideal or over the separate components of the ideal.
 \end{crl}
 \begin{crl}
 	Let $n$ be a positive integer with factorization into unique primes \[n=p_1^{\alpha_1} p_2^{\alpha_2}\dots p_k^{\alpha_k}\]
@@ -88,7 +89,7 @@
 	\modZ{168}&\cong (\modZ{8})\times(\modZ{3})\times(\modZ{7})
 	\end{align*}
 \end{example}
-\begin{proof}[Proof of CRT]
+\begin{proof}[Proof of CRT]~\\
 	We want to see
 	\begin{align*}
 	\phi\colon R&\to (R/A_1)\times (R/A_2)\times (R/A_3)\times\dots\times(R/A_k)\\
@@ -130,19 +131,19 @@
 	=&\phi(ry+sx)\implies \phi \text{ surjective}
 	\end{align*}
 	More generally if $A_1,\dots,A_k\subset R$ are ideals.\\
-	Let $A=A_1,\, B=A_2\rdot A_3\dots A_k$, then we have a homomorphism
+	Let $A=A_1,\, B=A_2\rdot A_3\dots \rdot  A_k$, then we have a homomorphism
 	\[\phi_1 \colon R\to R/A\times R/B, \quad \Ker\phi_1=A_1\cap B \]
-	Now $A_2/B,A_3/B,\dots,A_k/B\subset R/B$ are ideals.\\
+	Now by the Lattice Isomorphism Theorem $A_2/B,A_3/B,\dots,A_k/B\subset R/B$ are ideals.\\
 	Take 
-	\[A'=A_2/B,\quad B' = (A_3/B)\rdot (A_4/B)\dots \rdot (A_k/B) = (A_3\rdot A_4\rdot \dots A_k)/B\]
+	\[A'=A_2/B,\quad B' = (A_3/B)\rdot (A_4/B)\rdot \dots \rdot (A_k/B) = (A_3\rdot A_4\rdot \dots A_k)/B\]
 	Then we get a homomorphism
 	\[\phi_2\colon R/B\to (R/B)/A' \times (R/B)/B', \quad \Ker \phi_2 = A'\cap B'\]
 	By the third isomorphism theorem 
 	\[(R/B)/A'=(R/B)/(A_2/B)\cong R/A_2\]
-	and
+	and similarly,
 	\[(R/B)/B'=(R/B)/(A_3\rdot A_4\rdot \dots \rdot A_k)/B\cong R/(A_3\rdot A_4\rdot \dots \rdot A_k)\]
 	Therfore, we have 
-	\[\hat{\phi}_2=(\mathrm{Id},\phi_2)\circ \phi_1\colon R\to R/A_2\times R/A_2\times R/(A_3\rdot \dots\rdot A_k) \]
+	\[\hat{\phi}_2=(\mathrm{Id},\phi_2)\circ \phi_1\colon R\to R/A_1\times R/A_2\times R/(A_3\rdot \dots\rdot A_k) \]
 	Proceeding inductively on $k$, we end up with
 	\[\phi\colon R\to R/A_1\times R/A_2\times \dots \times R/A_k\]
 	and the surjectivity when $A_1,\dots,A_k$ are pairwise comaximal follow essentially because $A_1,A_2,\dots A_k$ are comaximal.
