--- a/Main.tex
+++ b/Main.tex
@@ -19,6 +19,7 @@
 \usepackage{tikz-cd}
 \usetikzlibrary{shapes,fit}
 \setlist[enumerate]{label=(\roman*)}
+\usepackage{breqn}
 
 \makeatletter
 \xpatchcmd{\@thm}{\thm@headpunct{.}}{\thm@headpunct{}}{}{}
@@ -192,4 +193,5 @@ boxed title style = {colback=green!35!black}
 \subfile{L8/L8}
 \subfile{L9/L9}
 \subfile{L10/L10}
+\subfile{L11/L11}
 \end{document}
