--- a/L12/L12.tex
+++ b/L12/L12.tex
@@ -177,7 +177,7 @@ Let $R$ be an commutative integral domain with $1\ne 0$. Recall some facts we've
 	Since $x^2+1$ has no nontrivial factors in $\R[x]$.
 \end{example}
 \newpage
-\underline{\textbf{\Large PIDs are UFDs}}
+\underline{\textbf{\Large Polynomial Rings with Multiple Variables}}
 
 \begin{dfn}
 	Let $R$ be a commutative ring with $1\ne 0$. \\
