--- a/L8/L8.tex
+++ b/L8/L8.tex
@@ -51,7 +51,7 @@ Consider $I=(x^2+1)$, then $I\subset \R[x]$ is a maximal ideal.
 		x^4= x^2\rdot x^2 &\implies \obar{x^4} = \obar{(-1)} \rdot  \obar{(-1)} \in \R[x]/I
 	\end{align*}
 	Therefore, since all powers of $x$ greater than $2$ can be deconstructed into products of $-1$ and $x$, we can collapse the cosets of the quotient to a convenient form:
-	\[\R[x]/I = \{\obar{a_0+a_1x}\mid a_0,a_1\in R\} \]
+	\[\R[x]/I = \{\obar{a_0+a_1x}\mid a_0,a_1\in \R\} \]
 	with the rule $\obar{x}\rdot \obar{x}=\obar{-1}$.\\
 	This should be familiar and there is a ring isomorphism
 	\begin{align*}
